--- a/ChatGPT-Clon/express/package.json
+++ b/ChatGPT-Clon/express/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server_db.js",
+    "dev": "nodemon server_db.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "lowdb": "^7.0.1"
+    "lowdb": "^7.0.1",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
